Continuing refactoring Fix some PMD violations Fix Bug 1144793 Fix Bug 1190624 (at least try)
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@3477 51baf565-9d33-0410-a72c-fc3788e3496d